# clinical-note-classifier

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: expected_outputs.json  mtsamples_sample.json  synthetic_notes.json
outputs/: batch_results.csv  sample_classification.json
scripts/: generate_figures.py  run_mtsamples.py
src/: classifier.py  evaluate.py  logging_config.py  main.py  models.py  prompts.py  providers.py  validation.py
tests/: test_classifier.py  test_evaluate.py  test_export.py  test_logging.py  test_models.py  test_prompts.py  test_validation.py
