[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-note-classifier"
version = "1.0.0"
description = "LLM-powered clinical decision support system that classifies free-text clinical notes into structured outputs: urgency level, primary complaint, ICD-10-CM coding, clinical reasoning, and recommended actions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kavosh Monfared" },
]
keywords = ["clinical", "nlp", "llm", "icd-10", "triage", "openai", "anthropic", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "gradio>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/kavosh-monfared/clinical-note-classifier"
Repository = "https://github.com/kavosh-monfared/clinical-note-classifier"

[project.scripts]
clinical-classify = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
